--- a/Q&A/Q&A/Base.lproj/Main.storyboard
+++ b/Q&A/Q&A/Base.lproj/Main.storyboard
@@ -6,39 +6,40 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Q&A-->
         <scene sceneID="2QD-RE-IzR">
             <objects>
-                <tableViewController id="HR3-tV-8Dg" sceneMemberID="viewController">
+                <tableViewController id="HR3-tV-8Dg" customClass="QuestionsTableViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="5Lf-Ao-huv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="110" id="VGh-pl-g8g">
-                                <rect key="frame" x="0.0" y="28" width="375" height="110"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="95" id="VGh-pl-g8g" customClass="QuestionTableViewCell" customModule="Q_A" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VGh-pl-g8g" id="396-WU-zOS">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="94.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VCA-lM-Rn4">
-                                            <rect key="frame" x="16" y="16" width="343" height="77.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VCA-lM-Rn4">
+                                            <rect key="frame" x="8" y="8" width="359" height="78.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rhY-KE-Lnj">
-                                                    <rect key="frame" x="0.0" y="0.0" width="126" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="126" height="21"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caD-0o-1rm">
-                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fBw-fE-Lzl">
-                                                            <rect key="frame" x="84" y="0.0" width="42" height="20.5"/>
+                                                            <rect key="frame" x="84" y="0.0" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -46,7 +47,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QMu-gL-naM">
-                                                    <rect key="frame" x="0.0" y="28.5" width="127" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="29" width="127" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asked by:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9M-bF-SUb">
                                                             <rect key="frame" x="0.0" y="0.0" width="77" height="20.5"/>
@@ -63,7 +64,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LM4-yD-bSi">
-                                                    <rect key="frame" x="0.0" y="57" width="43" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="57.5" width="43" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -72,10 +73,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="VCA-lM-Rn4" secondAttribute="bottom" constant="16" id="2xF-BQ-nZc"/>
-                                        <constraint firstItem="VCA-lM-Rn4" firstAttribute="top" secondItem="396-WU-zOS" secondAttribute="top" constant="16" id="6qX-dB-ZCt"/>
-                                        <constraint firstAttribute="trailing" secondItem="VCA-lM-Rn4" secondAttribute="trailing" constant="16" id="8qv-rE-kJS"/>
-                                        <constraint firstItem="VCA-lM-Rn4" firstAttribute="leading" secondItem="396-WU-zOS" secondAttribute="leading" constant="16" id="EzL-gs-HRy"/>
+                                        <constraint firstAttribute="bottom" secondItem="VCA-lM-Rn4" secondAttribute="bottom" constant="8" id="2xF-BQ-nZc"/>
+                                        <constraint firstItem="VCA-lM-Rn4" firstAttribute="top" secondItem="396-WU-zOS" secondAttribute="top" constant="8" id="6qX-dB-ZCt"/>
+                                        <constraint firstAttribute="trailing" secondItem="VCA-lM-Rn4" secondAttribute="trailing" constant="8" id="8qv-rE-kJS"/>
+                                        <constraint firstItem="VCA-lM-Rn4" firstAttribute="leading" secondItem="396-WU-zOS" secondAttribute="leading" constant="8" id="EzL-gs-HRy"/>
                                     </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -86,12 +87,66 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Q&amp;A" id="LSh-iM-M8H">
-                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="GJn-qQ-vaa"/>
+                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="GJn-qQ-vaa">
+                            <connections>
+                                <segue destination="5BU-Zo-Khy" kind="show" id="hKn-4b-0aO"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5YH-FP-jCU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1324" y="114.69265367316342"/>
+        </scene>
+        <!--Ask Question-->
+        <scene sceneID="JqN-t1-AZE">
+            <objects>
+                <viewController id="5BU-Zo-Khy" customClass="AskQuestionViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k7N-xD-QGE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WlA-U7-G70">
+                                <rect key="frame" x="0.0" y="132" width="375" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Yc4-ki-tV8">
+                                <rect key="frame" x="0.0" y="170" width="375" height="220"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ueH-mr-7HW" firstAttribute="trailing" secondItem="Yc4-ki-tV8" secondAttribute="trailing" id="1uE-HA-dHr"/>
+                            <constraint firstItem="WlA-U7-G70" firstAttribute="top" secondItem="ueH-mr-7HW" secondAttribute="top" constant="16" id="622-LX-oTu"/>
+                            <constraint firstItem="Yc4-ki-tV8" firstAttribute="height" secondItem="k7N-xD-QGE" secondAttribute="height" multiplier="0.33" priority="999" id="Ldy-Fd-IQf"/>
+                            <constraint firstItem="ueH-mr-7HW" firstAttribute="trailing" secondItem="WlA-U7-G70" secondAttribute="trailing" id="SVf-cu-beG"/>
+                            <constraint firstItem="WlA-U7-G70" firstAttribute="leading" secondItem="ueH-mr-7HW" secondAttribute="leading" id="jyh-Z3-YMe"/>
+                            <constraint firstItem="Yc4-ki-tV8" firstAttribute="leading" secondItem="ueH-mr-7HW" secondAttribute="leading" id="t6h-8M-2n0"/>
+                            <constraint firstItem="Yc4-ki-tV8" firstAttribute="top" secondItem="WlA-U7-G70" secondAttribute="bottom" constant="8" id="wwh-pS-UYa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ueH-mr-7HW"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Ask Question" id="lC5-tN-wnG">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="gyC-ZR-IkV">
+                            <connections>
+                                <action selector="submitQuestion:" destination="5BU-Zo-Khy" id="jyj-xo-zmb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="textField" destination="WlA-U7-G70" id="wHV-vh-x1X"/>
+                        <outlet property="textView" destination="Yc4-ki-tV8" id="FpP-12-QN1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0LW-0c-JzH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2028" y="114.69265367316342"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Srs-CL-jye">
